--- a/style.css
+++ b/style.css
@@ -66,8 +66,7 @@ nav ul li a:hover {
 
 /* Баннер */
 .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-                url('https://www.zoomlion.com/uploads/ueditor/image/20220428/1651120124115436.jpg');
+    background-image: url('https://images.unsplash.com/photo-1601579118715-7f4d9d6b9080?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80';
     background-size: cover;
     background-position: center;
     color: white;
